--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -12,13 +12,13 @@
               <p>Create post...</p>
             </div>
             <div class="postbtn">
-              <button>Post</button>
+              <button class="bbtn">Post</button>
             </div>
           </div>
           <%} %>
             <div class="postdiv">
               <div class="postdivnone">
-                <span>Cancel</span>
+                <span class="clear">Cancel</span>
                 <p class="newpost">New Post</p>
                 <p><i class="ri-heart-line"></i></p>
               </div>
